--- a/README.Rmd
+++ b/README.Rmd
@@ -39,20 +39,26 @@ devtools::install_local('./ltxtra-0.0.0.9000.tar.gz')
 ```
 -->
 
-## Example: Adding life disparity to a life table
+## Example 1: Adding life disparity to a life table
 
 This is a basic example which shows you how to solve a common problem:
 
 ```{r example}
 library(ltxtra)
 library(dplyr)
+library(ggplot2)
 
 head(aus_2021_2023 %>% select(!c(mx,ax)))
 
 daus_lt <- aus_2021_2023 %>% group_by(State,Sex) %>% lifedisp()
 
 head(daus_lt %>% select(!c(mx,ax)))
+
+daus_lt %>% ggplot() +
+  geom_line(aes(x=Age,y=vx,group=State,colour=State)) +
+  facet_wrap(vars(Sex))
 ```
+
 
 <!--
 What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
